Aligned fav icon in correct place

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -62,16 +62,9 @@
   border-radius: 20px;
 }
 .FavButton{
-<<<<<<< HEAD
   position: absolute;
   padding-left: 17%;
   padding-top: 0.9%;
-=======
-  text-align: right;
-  position: absolute;
-  padding: 1%;
->>>>>>> master
-
 }
 .MSG{
   padding-left: 5%;
